# calc

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  build.sh  run.sh  test  test.c  tmux.sh
.github/workflows/: test.yaml  tests.yaml  win_tests.yaml
scripts/: run.sh  tmux.sh
src/: add.c  calc.c  calc.h  calc.s  errors.c  input  input.c  input.s  lexer.c  main.c  num_ops.c  num_ops.cx  parse.c  parse_fixed.c  parse_float.c  parse_floating.c  rpn.c  rpn_eval.c  rpn_gen.c  shunting_yard.c  t.cx  test.cx  token.h
test/: all.cppx  all_t.cppx  all_tt.cppx  cli.cpp  cmd.cpp  float.cpp  input.c  nothing.cpp  pares_float.cppx  parse.cpp  parse.cppx  parse_float.cpp  parse_float_std.cpp  rpn_eval.cpp  rpn_eval.cppxp  rpn_eval.cppxx  rpn_gen.cpp  rpn_gen.cppx  strtof.cx  test.c  test.hpp
test/ascii_to_num/: error.cpp  fixed.cpp  float.cpp  ptr_pos.cpp
test/eval_rpn/fast_inplace/: float.cpp
test/parse_ascii/: sized.cpp  till.cpp
test/parse_num/: common.hpp  fixed.cppx  float.cpp
test/rpn/: buffered.cpp
